partway through testing

--- a/db_cache/CMakeLists.txt
+++ b/db_cache/CMakeLists.txt
@@ -4,7 +4,7 @@ project(db_cache)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_HOME_DIRECTORY}/cmake)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(db_cache main.cpp db_adapter/db_adapter.cpp db_adapter/db_adapter.h db_cache/db_cache.cpp db_cache/db_cache.h)
+add_executable(db_cache main.cpp db_adapter/db_adapter.cpp db_adapter/db_adapter.h db_cache/db_cache.cpp db_cache/db_cache.h quote_genr/quote_genr.cpp quote_genr/quote_genr.h)
 
 include_directories(${CMAKE_SOURCE_DIR})
 
